# open-web-ui

./: .gitignore  JCS2025_Iwamoto_chunks_highlighted.jsonl  README.md  api.py  compose.yml  pdf2md.py  pyproject.toml  rag_system.py  requirements.txt  test.py  test_essay.py  問答集(記述).csv  問答集(記述).txt  問答集.csv  問答集.txt  実験説明文.docx  抄録案.txt  抄録案_荻原怜子.docx  解析.py  解答.txt
knowledge_base/: temp_JCS2025_Iwamoto_chunks_highlighted.jsonl
templates/: finish.html  index.html  quiz.html  quiz_essay.html
検証実験/: output_essay_hiroshima.csv  output_essay_ikemoto.csv  output_essay_katayama.csv  output_essay_matsuo.csv  output_essay_orii.csv  output_essay_tamura.csv  output_hiroshima.csv  output_ikemoto.csv  output_katayama.csv  output_matsuo.csv  output_orii.csv  output_tamura.csv
