[project]
name = "open-web-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "fastapi>=0.115.12",
    "janome>=0.5.0",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
]
